--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.4.0/d3.min.js"></script>   
-        <script src="js/main_ipython.js"></script>
+        <script src="js/main.js"></script>
     </head>
 
     <body>
