--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
 
     <body>
+        <h1>A D3 Interactive Heatmap for Baltimore Parking Citation</h1>
+        <h3>Click on map twice to show citations</h1>
         <div id="controls" style="margin-bottom:15px"></div>
         <div id="summary" style="margin-bottom:15px">
             <label class="summary-label">Neighborhood : </label><span id="nh-name"  style="margin-right:100px"></span>
